<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEmployeeActivity"
    android:background="@color/colorWhiteBG"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_services"
                android:layout_width="650dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorWhite"
                android:padding="10dp"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <LinearLayout
                        android:id="@+id/employeeNameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Employee name"
                            android:textColor="@color/colorDarkText"
                            android:textStyle="bold"
                            android:textSize="@dimen/card_title"/>

                        <EditText
                            android:id="@+id/editTextEmpName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:textSize="@dimen/mediumText"
                            android:inputType="textAutoComplete"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/emppEmailAddressLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Email address"
                            android:textSize="@dimen/card_title"
                            android:textStyle="bold"
                            android:textColor="@color/colorDarkText"/>

                        <EditText
                            android:id="@+id/editTextEmpEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/mediumText"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:inputType="textEmailAddress"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/phoneNumberLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Phone number"
                            android:textColor="@color/colorDarkText"
                            android:textSize="@dimen/card_title"
                            android:textStyle="bold"/>

                        <EditText
                            android:id="@+id/editTextEmpPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:paddingLeft="5dp"
                            android:textSize="@dimen/mediumText"
                            android:inputType="number"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingRight="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Task"
                            android:textColor="@color/colorDarkText"
                            android:textSize="@dimen/card_title"
                            android:textStyle="bold"
                            android:layout_gravity="center"/>

                        <RadioGroup
                            android:id="@+id/radioGroupSoldBy"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:paddingLeft="10dp">

                            <RadioButton
                                android:id="@+id/radioBtnCashier"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/stringCashier"
                                android:buttonTint="@color/colorPrimary"/>

                            <RadioButton
                                android:id="@+id/radioBtnInventory"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:text="@string/stringInventory"
                                android:buttonTint="@color/colorPrimary"/>
                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/addPINCodeLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:gravity="center">

                        <Button
                            android:layout_width="200dp"
                            android:layout_height="50dp"
                            android:background="@color/colorPrimary"
                            android:text="ADD PIN CODE"
                            android:textColor="@color/colorWhite"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_pos"
                android:layout_width="650dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorWhite"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stringPOS"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/card_title_name"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">

                        <RadioGroup
                            android:id="@+id/radioGroupProdColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioBtnColor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Color"/>

                            <RadioButton
                                android:layout_width="287dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Image" />
                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="501dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/colorGray"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="5dp"
                            android:background="@color/colorGray"
                            android:text="" />

                        <Button
                            android:id="@+id/colorPeach"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="5dp"
                            android:background="@color/colorPeach"
                            android:text="" />

                        <Button
                            android:id="@+id/colorYellow"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="5dp"
                            android:background="@color/colorYellow"
                            android:text="" />

                        <Button
                            android:id="@+id/colorYellowGreen"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="5dp"
                            android:background="@color/colorYellowGreen"
                            android:text="" />

                        <Button
                            android:id="@+id/colorRed"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="5dp"
                            android:background="@color/colorRed"
                            android:text="" />

                        <Button
                            android:id="@+id/colorSkySkyBlue"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="5dp"
                            android:background="@color/colorSkySkyBlue"
                            android:text="" />

                        <Button
                            android:id="@+id/colorBlue"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="5dp"
                            android:background="@color/colorBlue"
                            android:text="" />

                        <Button
                            android:id="@+id/colorPurple"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="5dp"
                            android:background="@color/colorPurple"
                            android:text="" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>


    </ScrollView>

</LinearLayout>